--- a/templates/main.html
+++ b/templates/main.html
@@ -188,7 +188,9 @@
 
       /* Board */
       function deleteBoard(board){
-        board.parentElement.parentElement.parentElement.parentElement.remove()      
+        board.parentElement.parentElement.parentElement.parentElement.remove()  
+        var idBoard = board.parentElement.parentElement.parentElement.getAttribute("key").replace("board","")      
+        deleteBoardRequest(idBoard)    
       }
 
       /* item */
@@ -333,7 +335,12 @@
 
       <div id="createProjectEndpoint" data-endpoint="{% url 'create-project' %}"></div>
       <div id="getProjectsEndpoint" data-endpoint="{% url 'get-projects' %}"></div>
+
       <div id="userDashboard" data-endpoint="{% url 'user-dashboard' %}"></div>
+      
+      <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' %}"></div>
+
+
       <div id="csrfToken" data-token="{{csrf_token}}"></div>
       <div id="userId" data-user="{{user.id}}"></div>
         
