--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" /> -->
     
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>KanDo</title>
     <link rel="stylesheet" href="{% static 'styles/header.css' %}" />
@@ -17,9 +18,12 @@
     <link rel="stylesheet" href="{% static 'styles/dropdown.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <script src="{% static 'js/project.js' %}"></script> 
+    <script src="{% static 'js/item.js' %}"></script> 
     <script src="{% static 'js/board.js' %}"></script> 
+    <script src="{% static 'js/project.js' %}"></script> 
+  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script>
@@ -159,8 +163,7 @@
             saveProjectsInSession(JSON.stringify(resp.projects))
           })          
 
-        })
-        .catch(function(error) {
+        }).catch(function(error) {
           console.log(error);
         });
       }
@@ -212,22 +215,38 @@
           return          
         }
 
-        /* get item parent */
-        const projectParent = context.parentElement.getElementsByClassName("list-items-board-child")[0]         
-
-        /* Clone item element */      
-        // const element = document.getElementsByClassName('simple-item')[0]; 1
-        const element = document.getElementsByClassName('simple-item-box')[0];
-        const itemClone = element.cloneNode(true);
-
-        /* define element title */ 
-        // itemClone.textContent = newBoardItemName; 1
-        itemClone.getElementsByClassName('simple-item')[0].textContent = newBoardItemName; 
-        itemClone.style.display="flex";
-
-        itemClone.getElementsByClassName('dropdown')[0].id = 'drpdwn'+newBoardItemName.split(' ').join(''); // set a new id for a child, with that the related function can find it
+        // getting the board id from html
+        var boardId = context.parentElement.parentElement.getElementsByClassName('title-list-board-container')[0].getAttribute("key").replace("board","")
+      
+        /* creating into the database */
+        var newItem = createNewItem(boardId, newBoardItemName);
         
-        projectParent.append(itemClone);
+        console.log('Saving the igem;;;', context);
+
+        newItem.then(function(response) {
+          console.log('1...', response);
+          /* get item parent */
+                    
+          
+          const boardParent = document.querySelector(`[key="board${response.item.board}"]`).parentElement.getElementsByClassName("list-items-board-child")[0]        
+          
+          console.log('2...', boardParent);
+
+          /* Clone item element */      
+          const element = document.getElementsByClassName('simple-item-box')[0];
+          const itemClone = element.cloneNode(true);
+          console.log('3...');
+          /* define element title */ 
+          itemClone.getElementsByClassName('simple-item')[0].textContent = newBoardItemName; 
+          itemClone.style.display="flex";
+          console.log('4...');
+          itemClone.getElementsByClassName('dropdown')[0].id = 'drpdwn'+ newBoardItemName.split(' ').join(''); // set a new id for a child, with that the related function can find it
+          console.log('5...');
+          boardParent.append(itemClone);
+
+        }).catch(function(error) {
+          console.log(error);
+        });
       
       }
       
@@ -281,7 +300,7 @@
         }
 
         /* get item parent */
-        const projectParent = document.getElementsByClassName("dashboard-container")[0]         
+        const boardParent = document.getElementsByClassName("dashboard-container")[0]         
 
         /* Clone item element */     
         const modelElement = document.getElementById('parent-container-model');
@@ -337,8 +356,7 @@
       <div id="getProjectsEndpoint" data-endpoint="{% url 'get-projects' %}"></div>
 
       <div id="userDashboard" data-endpoint="{% url 'user-dashboard' %}"></div>
-      
-      <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' %}"></div>
+            
 
 
       <div id="csrfToken" data-token="{{csrf_token}}"></div>
