--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div>
     <div id="createBoardEndpoint" data-endpoint="{% url 'create-board' %}"></div>
+    <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' 0 %}"></div>
+    
+    <div id="createItemEndpoint" data-endpoint="{% url 'create-item' %}"></div>
+
     <div class="container-title-user-dashboard">        
         <span class="span-title-user-dashboard" id="selectedProjectTitle">{{project.name}}</span>
     </div>
