--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -5,7 +5,9 @@
     <div id="createBoardEndpoint" data-endpoint="{% url 'create-board' %}"></div>
     <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' 0 %}"></div>
     
+    
     <div id="createItemEndpoint" data-endpoint="{% url 'create-item' %}"></div>
+    <div id="deleteItemEndpoint" data-endpoint="{% url 'delete-item' 0 %}"></div>
 
     <div class="container-title-user-dashboard">        
         <span class="span-title-user-dashboard" id="selectedProjectTitle">{{project.name}}</span>
