--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -11,7 +11,7 @@
         <div id="parent-container" class="row align-items-start justify-content-start" >
             
             <!-- board model -->
-            {% include 'dashboard/board.html' with boardTitle='random' id='random' %}
+            {% include 'dashboard/board.html' with boardTitle='random' id='random' hidden='true' %}
             <!-- <div class="list-board-container" style="display: none"> 
                 <div class="title-list-board-container d-flex align-items-center justify-content-center" >
                     <div class="col-sm-2">
