--- a/templates/main.html
+++ b/templates/main.html
@@ -400,8 +400,13 @@
         }
 
         var projectId = element.parentElement.getAttribute("key");
-        deleteProjectRequest(projectId);
-        // fazer algo apos delete
+        deleteProjectRequest(projectId).then(resp=>{
+          element.parentElement.remove();
+        }).catch(function(error) {
+          console.log(error);
+        });
+
+        
       }
 
     </script>
