--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -39,7 +39,7 @@
 							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Login</button>
 						</div>
 
-						<p class="text-center text-muted mt-3 mb-0">Don't have an account? <a href="#!"
+						<p class="text-center text-muted mt-3 mb-0">Don't have an account? <a href="register"
 							class="fw-bold text-body"><u>Register here</u></a></p>
 
 					</form>
