--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -63,7 +63,7 @@
 							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Register</button>
 						</div>
 
-						<p class="text-center text-muted mt-3 mb-0">Have already an account? <a href="#!"
+						<p class="text-center text-muted mt-3 mb-0">Have already an account? <a href="login"
 							class="fw-bold text-body"><u>Login here</u></a></p>
 
 					</form>
