--- a/templates/main.html
+++ b/templates/main.html
@@ -211,7 +211,21 @@
           return          
         }
 
+        var key =  context.parentElement.parentElement.parentElement.getAttribute("key")
+        if(key){
+          var boardId = key.replace("board","");
+          updateBoardNameRequest(editedBoardName, boardId).then(resp=>{
+            
+            console.log('Alterado');
+
+          }).catch(err=>{
+            console.log(err);
+          })
+        }
+
+
         context.parentElement.parentElement.parentElement.querySelector("span").textContent = editedBoardName
+
       }
 
       /* Board */
@@ -387,7 +401,7 @@
 
                     
         projectParent.append(elementClone);
-        createNewProject(newProjectName);           
+        createNewProject(newProjectName);                
         closeNav();
       }
 
@@ -401,6 +415,7 @@
         var projectId = element.parentElement.getAttribute("key");
         deleteProjectRequest(projectId).then(resp=>{
           element.parentElement.remove();
+          loadFirstProjectFromSession();   
         }).catch(function(error) {
           console.log(error);
         });
