--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -5,6 +5,7 @@
     
     <div id="createBoardEndpoint" data-endpoint="{% url 'create-board' %}"></div>
     <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' 0 %}"></div>
+    <div id="updateBoardEndpoint" data-endpoint="{% url 'update-board' %}"></div>
     
     
     <div id="createItemEndpoint" data-endpoint="{% url 'create-item' %}"></div>
