--- a/dashboard/templates/dashboard/modal_item.html
+++ b/dashboard/templates/dashboard/modal_item.html
@@ -4,17 +4,18 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabelItem">Modal title</h5>
           <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" onclick="$('#modalItem').modal('hide'); ">
             <!-- <span aria-hidden="true">&times;</span> -->
           </button>
         </div>
         <div class="modal-body">
-          <small id="modalSmallMessage" class="form-text text-muted">Small message</small>
-          <input type="text" class="form-control" id="modalInput" placeholder="Ex: Testing" >
+          <small id="modalSmallMessage2" class="form-text text-muted">Small message</small>
+          <input type="text" class="form-control" id="modalInputItem" placeholder="Ex: Testing" >
         
-          <small id="modalSmallMessage" class="form-text text-muted">Description</small>
-          <input type="text" class="form-control" id="modalDescInput" placeholder="Ex: Testing" >
+          <small id="modalSmallMessage3" class="form-text text-muted">Description</small>
+          
+          <textarea name="Text1" class="form-control" id="modalDescInputItem" cols="40" rows="5"></textarea>
         </div>
         
         <div class="modal-footer">
