--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -8,6 +8,7 @@
     <div id="updateBoardEndpoint" data-endpoint="{% url 'update-board' %}"></div>
     
     
+    <div id="getItemEndpoint" data-endpoint="{% url 'get-item' 0 %}"></div>
     <div id="createItemEndpoint" data-endpoint="{% url 'create-item' %}"></div>
     <div id="deleteItemEndpoint" data-endpoint="{% url 'delete-item' 0 %}"></div>
     <div id="updateItemEndpoint" data-endpoint="{% url 'update-item' %}"></div>
