bottom color for item

--- a/dashboard/templates/dashboard/modal_item.html
+++ b/dashboard/templates/dashboard/modal_item.html
@@ -19,7 +19,7 @@
           
           <small id="modalSmallMessage4" class="form-text text-muted">Color</small>
           <select class="form-select" aria-label="Select a color" id="selectColor">
-            <option selected>Color</option>
+            <option selected value="transparent">No Color</option>
             <option value="green">Green</option>
             <option value="yellow">Yellow</option>
             <option value="red">Red</option>
