getting the items order in the canvas

--- a/templates/main.html
+++ b/templates/main.html
@@ -201,6 +201,8 @@
 
         context = board;
         type = EDIT_BOARD;
+
+        getItemsPositionOnCanvas(board);
       }
 
       /* Board */
