--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -74,6 +74,7 @@
                 }
                 
             }else if(sessionStorage.getItem('projects')){
+                console.log(sessionStorage.getItem('projects')); // none is the problem
                 var projs = JSON.parse(sessionStorage.getItem('projects'))                
                 selectProject(projs[0], attribute=false)
             }
