--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -12,6 +12,7 @@
     <div id="createItemEndpoint" data-endpoint="{% url 'create-item' %}"></div>
     <div id="deleteItemEndpoint" data-endpoint="{% url 'delete-item' 0 %}"></div>
     <div id="updateItemEndpoint" data-endpoint="{% url 'update-item' %}"></div>
+    <div id="updateItemsEndpoint" data-endpoint="{% url 'update-items' %}"></div>
     
     <div id="deleteProjectEndpoint" data-endpoint="{% url 'delete-project' 0 %}"></div>
 
