--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -43,9 +43,9 @@
                 <div class="list-items-board flex-row align-items-center justify-content-center">
                     <div class="list-items-board-child">
 
-                        {% include 'dashboard/item.html' with id='menu1' text='Build' %}
+                        {% include 'dashboard/item.html' with id='menu1' text='Task nº 1' %}
                         
-                        {% include 'dashboard/item.html' with id='menu2' text='Burn it, fix it, trash it' %}
+                        {% include 'dashboard/item.html' with id='menu2' text='Task nº 2' %}
                         
                                                                                                                            
 
