updating the boards position in the project

--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -6,6 +6,7 @@
     <div id="createBoardEndpoint" data-endpoint="{% url 'create-board' %}"></div>
     <div id="deleteBoardEndpoint" data-endpoint="{% url 'delete-board' 0 %}"></div>
     <div id="updateBoardEndpoint" data-endpoint="{% url 'update-board' %}"></div>
+    <div id="updateBoardsEndpoint" data-endpoint="{% url 'update-boards' %}"></div>
     
     
     <div id="getItemEndpoint" data-endpoint="{% url 'get-item' 0 %}"></div>
